...
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="100"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVS-Zj-zB8">
                                <rect key="frame" x="86" y="304" width="34" height="30"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveButtonPress:" destination="X1V-85-Nuw" eventType="touchUpInside" id="QgJ-Kf-gcp"/>
                                </connections>
                            </button>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vZ-lo-mcc">
                                <rect key="frame" x="254" y="304" width="53" height="30"/>
                                <state key="normal" title="Discard"/>
                                <connections>
                                    <action selector="discardButtonPress:" destination="X1V-85-Nuw" eventType="touchUpInside" id="eKc-co-u5v"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
